@@ -38,6 +38,9 @@
 <p>2015-03-10  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>magick/utility.c (TranslateTextEx): -format %Q should report
+JPEG quality estimate if it is available.  Resolves SourceForge
+bug #293 &quot;gm identify bug?&quot;.</li>
 <li>doc/options.imdoc: Documented JPEG-specific -format tags.</li>
 </ul>
 </blockquote>
